fix player hand spacing

--- a/src/client/components/game/player-hand.scss
+++ b/src/client/components/game/player-hand.scss
@@ -43,7 +43,7 @@
 		flex-wrap: wrap;
 		padding: 5px;
 		max-height: 630px;
-		justify-content: stretch;
+		justify-content: space-between;
 		overflow-y: auto;
 
 		> .c-card {
